# vir-simd

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Makefile  README.md  latest_std_flag.sh  stdlibtest.cpp
.github/workflows/: API-docs.yml  CI.yml  Clang.yml  Emscripten.yml  GCC.yml  MSVC.yml  doxygen.yml  fair-software.yml  makefile.yml
docs/: cppreference.xml
master/: annotated_dup.js  classvir_1_1simd__tuple_3_01T_00_01N_01_4-members.html  classvir_1_1vectorized__struct_3_01T_00_01N_01_4.html  concepts.html  concepts.js  conceptvir_1_1any__simd__mask.html  conceptvir_1_1detail_1_1simd__execution__iterator.html  conceptvir_1_1detail_1_1simd__execution__policy.html  conceptvir_1_1detail_1_1simd__execution__range.html  conceptvir_1_1sized__simd.html  conceptvir_1_1sized__simd__mask.html  conceptvir_1_1typed__simd.html  dir_c7434cc13ddc7299087c5c3913d641f5.js  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  group__vir__count__if.html  group__vir__for__each.js  group__vir__reduce.js  group__vir__transform.html  group__vir__transform.js  group__vir__transform__reduce.html  group__vir__transform__reduce.js  hierarchy.js  index.html  md_CODE__OF__CONDUCT.html  md_README.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespacevir.html  namespacevir_1_1execution.js  namespacevir_1_1simd__permutations.html  simd_8h_source.html  simd__benchmarking_8h_source.html  simd__bit_8h_source.html  simd__bitset_8h_source.html  simd__concepts_8h.html  (+24 more)
master/search/: all_1.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_6.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  concepts_1.js  functions_1.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  groups_0.js  groups_2.js  groups_3.js  groups_5.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_1.js  variables_4.js  variables_5.js
testsuite/: README.md  README.md.license  driver.sh  generate_makefile.sh  standard_abi_usable.cc  standard_abi_usable_2.cc
testsuite/tests/: abs.cc  algorithms.cc  bitset.cc  broadcast.cc  casts.cc  for_each.cc  fpclassify.cc  frexp.cc  generator.cc  remqo.cc  (+26 more)
vir/: constexpr_wrapper.h  detail.h  simd.h  simd_benchmarking.h  simd_bit.h  simd_bitset.h  simd_cast.h  simd_concepts.h  simd_cvt.h  simd_execution.h  simd_float_ops.h  simd_iota.h  simd_permute.h  simd_resize.h  simd_version.h  simdize.h  struct_reflect.h  test.cpp  test_constexpr_wrapper.cpp
(+105 files in other folders)
